--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,9 @@
             <div class="tile">
                 <img src="<%= pokedex[pokemon].img %>" alt="">
                 <div class="gbc">
+                    <img class="gbc-img" 
+                    src="/static/gbc<%= Math.floor(Math.random()*5) %>.png" 
+                    alt="" srcset="">
                         <div class="pokemon-name"><%= pokedex[pokemon].name %></div>
                     </div>
             </div>
