added pokemonCreator, finished edit route

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,7 +4,8 @@
 
 <body>
     <div class="titlebar">
-        <h2><%= pokemon.name %></h2>
+            <img src="https://raw.githubusercontent.com/sleduardo20/pokedex/0671af442dff1d8f7141e49eb83b438885bbc9e9/public/img/logo.svg" alt="" srcset="">
+        
         <div>
             <a href="/pokedex/<%= id %>/edit"><button>Edit Pokemon</button></a>
             <a href="/pokedex"><button>Return to Pokedex</button></a>
