--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,7 +4,8 @@
 
   <body>
     <div class="titlebar">
-      <h2>Edit <%= pokemon.name %></h2>
+      <img src="https://raw.githubusercontent.com/sleduardo20/pokedex/0671af442dff1d8f7141e49eb83b438885bbc9e9/public/img/logo.svg" alt="" srcset="">
+
       <div>
       <a href="/pokedex"><button>Return to Pokedex</button></a>
       </div>
@@ -12,6 +13,8 @@
 
     <form class="main" action="/pokedex/<%= id %>?_method=PUT" method="post">
       <div>
+        <h2><%= pokemon.name %></h2>
+
         <div class="tile tileplus">
           <img class="tileplus" src="<%= pokemon.img %>" alt="">
           <!-- <div class="gbc tileplus">
@@ -32,17 +35,20 @@
             <% let space=pc.indexOf(" ") %>
                <input type="text" name="classification" value="<%= pc %>"/>
             
-          Pokemon Type
-              (separate with comma, space): 
+          Pokemon Type (separate with comma, space): 
                 <input type="text" name="type" value="<%= pokemon.type.join(", ") %>"/>
-        <input type="submit" value="Update" />
+        
+                <!-- submit button -->
+                <input type="submit" value="Update" />
             
         </div>
         <div class="narrow-input">
             <h4>Stats:</h4>
             <% for (let stat in pokemon.stats) { %>
-              <label><%=stat.toUpperCase()%>: <input size="8" maxlength="2" type="text" name="<%= stat %>" value="<%= pokemon.stats[stat] %>"></label>
-              <%}%>
+              <label>
+                <%=stat.toUpperCase()%>: <input size="8" maxlength="2" type="text" name="<%= stat %>" value="<%= pokemon.stats[stat] %>">
+              </label>
+              <%}%> 
               
         </div>
         <div class="narrow-input">
