--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,8 @@
     <%- include('partials/head.ejs') %>
 <body>
     <div class="titlebar">
-        <h2>Pokedex</h2>
+        <!-- <h2>Pokedex</h2> -->
+        <img src="https://raw.githubusercontent.com/sleduardo20/pokedex/0671af442dff1d8f7141e49eb83b438885bbc9e9/public/img/logo.svg" alt="" srcset="">
         <button>Add Pokemon</button>
     </div>
     <div class="display"> <!--this is where they live-->
