--- a/views/show.ejs
+++ b/views/show.ejs
@@ -13,8 +13,8 @@
     </div>
     <div class="main">
         <div>
-            <div class="tile tileplus">
-                <img class="tileplus" src="<%= pokemon.img %>" alt="">
+            <div class="tile-new tileplus">
+                <img class="tileshow" src="<%= pokemon.img %>" alt="">
                 <!-- <div class="gbc tileplus">
                     <img class="gbc-img tileplus" 
                     src="/static/gbc<%= Math.floor(Math.random()*5) %>.png" 
