--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -15,8 +15,8 @@
       <div>
         <h2><%= pokemon.name %></h2>
 
-        <div class="tile tileplus">
-          <img class="tileplus" src="<%= pokemon.img %>" alt="">
+        <div class="tile-new tileplus">
+          <img class="tileshow" src="<%= pokemon.img %>" alt="">
           <!-- <div class="gbc tileplus">
                     <img class="gbc-img tileplus" 
                     src="/static/gbc<%= Math.floor(Math.random()*5) %>.png" 
